# MongoPilot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  setup.sh  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_history.sql  004_read_only.sql  005_scripts.sql  006_ai_persistence.sql
src-tauri/src/: backup.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  mod.rs  prompt.rs  schema.rs
src-tauri/src/commands/: ai.rs  backup.rs  collection.rs  connection.rs  database.rs  document.rs  export.rs  logging.rs  mod.rs  query.rs  script.rs  server.rs  updater.rs  user.rs
src-tauri/src/connection/: config.rs  manager.rs  mod.rs  ssh_tunnel.rs
src-tauri/src/crypto/: aes.rs  key_store.rs  mod.rs
src-tauri/src/query/: executor.rs  exporter.rs  mod.rs
src-tauri/src/storage/: ai_repo.rs  connection_repo.rs  database.rs  history_repo.rs  mod.rs  script_repo.rs  settings_repo.rs
src/ai/: tools.ts
src/api/: ai.ts  backup.ts  collectionMgmt.ts  connection.ts  database.ts  document.ts  export.ts  invoke.ts  query.ts  script.ts  server.ts  updater.ts
src/stores/: ai.ts  connection.ts  database.ts  editor.ts  script.ts
src/types/: ai.ts  connection.ts  database.ts  document.ts  script.ts  (+1 more)
tests/: query-preeval.test.ts
(+51 files in other folders)
