[package]
name = "mongopilot"
version = "0.1.31"
edition = "2021"

[lib]
name = "mongopilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
mongodb = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
aes-gcm = "0.10"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
urlencoding = "2"
futures = "0.3"
tauri-plugin-dialog = "2.7.0"
chrono = "0.4.44"
rust_xlsxwriter = "0.94.0"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
